test/errors/expr_assign.py
4 = 42
~x = 42
*x = 42
x, 7 = 42
7, x = 42
